# graphsack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  graphsack.sln  graphsack.vcxproj  graphsack.vcxproj.filters
src/: CMakeLists.txt  README.md  SolverRunner.hpp  Validator.hpp  bit_vector.hpp  composite_instance.hpp  cuda_init.cu  cuda_init.h  cuda_structure_check.cu  cuda_structure_check.cuh  cuda_test.cu  cuda_test.h  instance.hpp  iterator.hpp  json.hpp  main.cpp  requirements.hpp  slice.hpp  stats.hpp  structure.hpp  structure_check.hpp  weight_treatment.hpp  weight_value_vector.hpp  weight_vector_operations.hpp
src/cuda/: buffer.cuh  curand_wrapper.cuh  device_properties.cuh  error_wrapper.cuh
src/graphs/: adjacency_matrix.cpp  adjacency_matrix.hpp  arch_list.hpp  nexts_list.hpp  representation.hpp
src/inst/: README.md  composite_instance.hpp  cuda_instance.cu  cuda_instance.cuh  cuda_instance.hpp  cuda_instance_memory.cuh  gs_random.hpp  inst_generator.hpp  inst_macros.hpp  itemlocal_nlist.hpp  naive_item_vector.hpp  weight_value_vector.hpp
src/res/: README.md  bit_vector.hpp  cuda_solution.cuh  cuda_solution.hpp  cuda_soluton.cu
src/solvers/: BruteForce.hpp  CMakeLists.txt  CudaBruteForce.cu  CudaBrutforce.hpp  CudaGRASP.cu  CudaGRASP.hpp  Dynamic.hpp  GHS.hpp  GRASP.hpp  Greedy.hpp  MultiRun.hpp  PathBruteForce.hpp  README.md  cuda_buffer.cuh  cuda_greedy_utils.cuh  cuda_reductions.cuh  metric.hpp  ompBruteForce.hpp  ompGRASP.hpp  size_string.hpp  structure_to_find_dispatch.hpp
